fix: writer web capture when filters are empty strings fix: writer plugin loaded when web page registered chg: simplify modules tree by moving writer & duplicogram pages into      guile/junkie/ fix: (junkie www server) module no longer depends on (junkie www crud) new: can add any web page to (junkie www server)

--- a/guile/junkie/Makefile.am
+++ b/guile/junkie/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = . www writer netmatch
+SUBDIRS = . www netmatch
 
 include $(top_srcdir)/scm2go.am
 
@@ -8,7 +8,9 @@ SCM = \
 	defs.scm \
 	snmp-subagt.scm \
 	tools.scm \
-	signatures.scm
+	signatures.scm \
+	writer.scm \
+	duplicogram.scm
 
 GOBJECTS = $(SCM:%.scm=%.go)
 
