--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -95,7 +95,7 @@ flood_check_SOURCES = flood_check.c lib.c lib.h
 flood_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
 port_range_check_SOURCES = port_range_check.c lib.c lib.h
 port_range_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
-pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/proto/proto.c
+pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/proto/proto.c ../src/proto/hook.c
 pkt_wait_list_check_LDADD = ../src/tools/libjunkietools.la
 ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h
 ip_reassembly_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
