fix: of course Makefile must not run sudo

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,5 +54,5 @@ module-deps: module-deps.dot
 	@$(top_srcdir)/find_cycles
 
 setcap:
-	sudo -n setcap cap_net_raw,cap_net_admin=eip $(bindir)/junkie || true
+	setcap cap_net_raw,cap_net_admin=eip $(bindir)/junkie
 
