fix: most of make dist
There are (at least) one problem left: local installation of guile .go
files fail since `guile-config info sitedir` returns the actual installation
path whatever the --prefix given to configure.
Not sure how to fix this without imposing too much inconvenience.

--- a/src/proto/Makefile.am
+++ b/src/proto/Makefile.am
@@ -30,6 +30,7 @@ libproto_la_SOURCES = \
 libproto_la_LIBADD = ../tools/libjunkietools.la
 libproto_la_LDFLAGS = -export-dynamic
 
+.INTERMEDIATE: $(srcdir)/p0f.fp $(srcdir)/fp_2_c.py
 $(srcdir)/os-detect.c: $(srcdir)/p0f.fp $(srcdir)/fp_2_c.py
 	$(srcdir)/fp_2_c.py < $< > $@
 
