new: delayogram plugin to observe nagle or others delays

--- a/configure.ac
+++ b/configure.ac
@@ -89,6 +89,7 @@ AC_CONFIG_FILES([
 	plugins/packetogram/Makefile
 	plugins/duplicogram/Makefile
 	plugins/nettop/Makefile
+	plugins/delayogram/Makefile
 	config/Makefile
 	config/cacti/Makefile
 	guile/Makefile
