chg: use djb2 as the hash function
Its *much* simpler and not noticeably slower on our use case when
inlined.

--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -4,7 +4,7 @@ AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE
 lib_LTLIBRARIES = libjunkietools.la
 
 libjunkietools_la_SOURCES = \
-	files.c hash.c ip_addr.c jhash.c \
+	files.c hash.c ip_addr.c \
 	log.c mallocer.c mutex.c redim_array.c \
 	tempstr.c timeval.c ext.c cli.c ref.c \
 	sock.c serialization.c netflow.c \
