chg: dev: Remove no longer used serialization stuff.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,7 +21,7 @@ dist_check_SCRIPTS = \
 	pkt_source_stats.scm eth_padding.test \
 	pkt_source_dev_id.scm ftp.test gre.test \
 	ip.test timeout.scm eth.test cifs.test sip.test \
-	serialize_check writer_check.scm \
+	writer_check.scm \
 	dedup_conf1.test dedup_conf2.test \
 	http.test http-chunked.test http-multiline.test \
 	tcp.test os-detect.test icmp.test tools-check \
