--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ Makefile.in
 .libs
 config.guess
 config.sub
+compile
+test-driver
 depcomp
 install-sh
 ltmain.sh
@@ -68,6 +70,7 @@ tests/postgres_check
 tests/oracle_check
 tests/endianness_check
 tests/cli_check
+tests/skinny_check
 tests/cursor_check
 tests/mutex_check
 tests/objalloc_check
