Added missing -lm.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -45,74 +45,74 @@ TESTS_ENVIRONMENT = \
 #LDFLAGS += -lefence
 
 digest_queue_check_SOURCES = digest_queue_check.c
-digest_queue_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+digest_queue_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 timeval_check_SOURCES = timeval_check.c
-timeval_check_LDADD = ../src/tools/libjunkietools.la
+timeval_check_LDADD = ../src/tools/libjunkietools.la -lm
 files_check_SOURCES = files_check.c
-files_check_LDADD = ../src/tools/libjunkietools.la
+files_check_LDADD = ../src/tools/libjunkietools.la -lm
 hash_check_SOURCES = hash_check.c
-hash_check_LDADD = ../src/tools/libjunkietools.la
+hash_check_LDADD = ../src/tools/libjunkietools.la -lm
 liner_check_SOURCES = liner_check.c
-liner_check_LDADD = ../src/tools/libjunkietools.la
+liner_check_LDADD = ../src/tools/libjunkietools.la -lm
 ip_addr_check_SOURCES = ip_addr_check.c
-ip_addr_check_LDADD = ../src/tools/libjunkietools.la
+ip_addr_check_LDADD = ../src/tools/libjunkietools.la -lm
 log_check_SOURCES = log_check.c
-log_check_LDADD = ../src/tools/libjunkietools.la
+log_check_LDADD = ../src/tools/libjunkietools.la -lm
 redim_array_check_SOURCES = redim_array_check.c
-redim_array_check_LDADD = ../src/tools/libjunkietools.la
+redim_array_check_LDADD = ../src/tools/libjunkietools.la -lm
 mallocer_check_SOURCES = mallocer_check.c
-mallocer_check_LDADD = ../src/tools/libjunkietools.la
+mallocer_check_LDADD = ../src/tools/libjunkietools.la -lm
 cli_check_SOURCES = cli_check.c
-cli_check_LDADD = ../src/tools/libjunkietools.la
+cli_check_LDADD = ../src/tools/libjunkietools.la -lm
 mutex_check_SOURCES = mutex_check.c
-mutex_check_LDADD = ../src/tools/libjunkietools.la
+mutex_check_LDADD = ../src/tools/libjunkietools.la -lm
 
 ip_check_SOURCES = ip_check.c lib.c lib.h
-ip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+ip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 udp_check_SOURCES = udp_check.c lib.c lib.h
-udp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+udp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 tcp_check_SOURCES = tcp_check.c lib.c lib.h
-tcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+tcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 http_check_SOURCES = http_check.c lib.c lib.h
-http_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+http_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 skinny_check_SOURCES = skinny_check.c lib.c lib.h
-skinny_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+skinny_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 sip_check_SOURCES = sip_check.c lib.c lib.h
-sip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+sip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 sdp_check_SOURCES = sdp_check.c lib.c lib.h
-sdp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+sdp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 mgcp_check_SOURCES = mgcp_check.c lib.c lib.h
-mgcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+mgcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 dns_check_SOURCES = dns_check.c lib.c lib.h
-dns_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+dns_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 cnxtrack_check_SOURCES = cnxtrack_check.c lib.c lib.h
-cnxtrack_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+cnxtrack_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 icmp_check_SOURCES = icmp_check.c lib.c lib.h
-icmp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+icmp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 rtcp_check_SOURCES = rtcp_check.c lib.c lib.h
-rtcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+rtcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 arp_check_SOURCES = arp_check.c lib.c lib.h
-arp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+arp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 flood_check_SOURCES = flood_check.c lib.c lib.h
-flood_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+flood_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 port_range_check_SOURCES = port_range_check.c lib.c lib.h
-port_range_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+port_range_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/proto/proto.c ../src/proto/hook.c
-pkt_wait_list_check_LDADD = ../src/tools/libjunkietools.la
+pkt_wait_list_check_LDADD = ../src/tools/libjunkietools.la -lm
 ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h
-ip_reassembly_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+ip_reassembly_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h
-tcp_reorder_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+tcp_reorder_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 streambuf_check_SOURCES = streambuf_check.c lib.c lib.h
-streambuf_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+streambuf_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 postgres_check_SOURCES = postgres_check.c lib.c lib.h
-postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 oracle_check_SOURCES = oracle_check.c lib.c lib.h
-oracle_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la
+oracle_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 endianness_check_SOURCES = endianness_check.c
-endianness_check_LDADD = ../src/tools/libjunkietools.la
+endianness_check_LDADD = ../src/tools/libjunkietools.la -lm
 cursor_check_SOURCES = cursor_check.c
-cursor_check_LDADD = ../src/tools/libjunkietools.la
+cursor_check_LDADD = ../src/tools/libjunkietools.la -lm
 
 clean-local:
 	rm -f *.log vgcore.* core.* core
