Heavy modifications on oracle parser

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,7 +12,7 @@ check_PROGRAMS = \
 	icmp_check rtcp_check flood_check port_range_check \
 	arp_check pkt_wait_list_check ip_reassembly_check \
 	tcp_reorder_check streambuf_check cli_check \
-	postgres_check oracle_check endianness_check \
+	postgres_check endianness_check \
 	cursor_check mutex_check
 
 dist_check_SCRIPTS = \
@@ -108,8 +108,6 @@ streambuf_check_SOURCES = streambuf_check.c lib.c lib.h
 streambuf_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 postgres_check_SOURCES = postgres_check.c lib.c lib.h
 postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-oracle_check_SOURCES = oracle_check.c lib.c lib.h
-oracle_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 endianness_check_SOURCES = endianness_check.c
 endianness_check_LDADD = ../src/tools/libjunkietools.la -lm
 cursor_check_SOURCES = cursor_check.c
