--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,7 +14,7 @@ check_PROGRAMS = \
 	tcp_reorder_check streambuf_check cli_check \
 	postgres_check endianness_check \
 	cursor_check mutex_check \
-	mysql_check tls_check tds_check
+	mysql_check tns_check tls_check tds_check
 
 dist_check_SCRIPTS = \
 	postgres.test mysql.test oracle.test tds.test dns.test \
@@ -120,6 +120,8 @@ mysql_check_SOURCES = mysql_check.c lib.c lib.h sql_test.c sql_test.h
 mysql_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 tds_check_SOURCES = tds_check.c lib.c lib.h sql_test.c sql_test.h
 tds_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
+tns_check_SOURCES = tns_check.c lib.c lib.h sql_test.c sql_test.h
+tns_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 
 clean-local:
 	rm -f *.log vgcore.* core.* core
