chg: added string_buffer fuctions

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,7 +13,7 @@ check_PROGRAMS = \
 	arp_check pkt_wait_list_check ip_reassembly_check \
 	tcp_reorder_check streambuf_check cli_check \
 	postgres_check endianness_check \
-	cursor_check mutex_check \
+	cursor_check string_buffer_check mutex_check \
 	mysql_check tns_check tls_check tds_check
 
 dist_check_SCRIPTS = \
@@ -111,13 +111,14 @@ postgres_check_SOURCES = postgres_check.c lib.c lib.h
 postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 endianness_check_SOURCES = endianness_check.c
 endianness_check_LDADD = ../src/tools/libjunkietools.la -lm
+string_buffer_check_SOURCES = string_buffer_check.c
+string_buffer_check_LDADD = ../src/tools/libjunkietools.la -lm
 cursor_check_SOURCES = cursor_check.c
 cursor_check_LDADD = ../src/tools/libjunkietools.la -lm
 tls_check_SOURCES = tls_check.c lib.c lib.h
 tls_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 mysql_check_SOURCES = mysql_check.c lib.c lib.h sql_test.c sql_test.h
 mysql_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-tds_check_SOURCES = tds_check.c lib.c lib.h
 tds_check_SOURCES = tds_check.c lib.c lib.h sql_test.c sql_test.h
 tds_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 tns_check_SOURCES = tns_check.c lib.c lib.h sql_test.c sql_test.h
