fix; misc fixes on sql parsers

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -107,7 +107,7 @@ tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h
 tcp_reorder_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 streambuf_check_SOURCES = streambuf_check.c lib.c lib.h
 streambuf_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-postgres_check_SOURCES = postgres_check.c lib.c lib.h
+postgres_check_SOURCES = postgres_check.c lib.c lib.h sql_test.c sql_test.h
 postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 endianness_check_SOURCES = endianness_check.c
 endianness_check_LDADD = ../src/tools/libjunkietools.la -lm
