chg: renamed lib.c to lib_test_junkie

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -69,45 +69,45 @@ cli_check_LDADD = ../src/tools/libjunkietools.la -lm
 mutex_check_SOURCES = mutex_check.c
 mutex_check_LDADD = ../src/tools/libjunkietools.la -lm
 
-ip_check_SOURCES = ip_check.c lib.c lib.h
+ip_check_SOURCES = ip_check.c lib_test_junkie.c lib_test_junkie.h
 ip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-udp_check_SOURCES = udp_check.c lib.c lib.h
+udp_check_SOURCES = udp_check.c lib_test_junkie.c lib_test_junkie.h
 udp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-tcp_check_SOURCES = tcp_check.c lib.c lib.h
+tcp_check_SOURCES = tcp_check.c lib_test_junkie.c lib_test_junkie.h
 tcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-http_check_SOURCES = http_check.c lib.c lib.h
+http_check_SOURCES = http_check.c lib_test_junkie.c lib_test_junkie.h
 http_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-skinny_check_SOURCES = skinny_check.c lib.c lib.h
+skinny_check_SOURCES = skinny_check.c lib_test_junkie.c lib_test_junkie.h
 skinny_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-sip_check_SOURCES = sip_check.c lib.c lib.h
+sip_check_SOURCES = sip_check.c lib_test_junkie.c lib_test_junkie.h
 sip_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-sdp_check_SOURCES = sdp_check.c lib.c lib.h
+sdp_check_SOURCES = sdp_check.c lib_test_junkie.c lib_test_junkie.h
 sdp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-mgcp_check_SOURCES = mgcp_check.c lib.c lib.h
+mgcp_check_SOURCES = mgcp_check.c lib_test_junkie.c lib_test_junkie.h
 mgcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-dns_check_SOURCES = dns_check.c lib.c lib.h
+dns_check_SOURCES = dns_check.c lib_test_junkie.c lib_test_junkie.h
 dns_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-cnxtrack_check_SOURCES = cnxtrack_check.c lib.c lib.h
+cnxtrack_check_SOURCES = cnxtrack_check.c lib_test_junkie.c lib_test_junkie.h
 cnxtrack_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-icmp_check_SOURCES = icmp_check.c lib.c lib.h
+icmp_check_SOURCES = icmp_check.c lib_test_junkie.c lib_test_junkie.h
 icmp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-rtcp_check_SOURCES = rtcp_check.c lib.c lib.h
+rtcp_check_SOURCES = rtcp_check.c lib_test_junkie.c lib_test_junkie.h
 rtcp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-arp_check_SOURCES = arp_check.c lib.c lib.h
+arp_check_SOURCES = arp_check.c lib_test_junkie.c lib_test_junkie.h
 arp_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-flood_check_SOURCES = flood_check.c lib.c lib.h
+flood_check_SOURCES = flood_check.c lib_test_junkie.c lib_test_junkie.h
 flood_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-port_range_check_SOURCES = port_range_check.c lib.c lib.h
+port_range_check_SOURCES = port_range_check.c lib_test_junkie.c lib_test_junkie.h
 port_range_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/proto/proto.c ../src/proto/hook.c
+pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib_test_junkie.c lib_test_junkie.h ../src/proto/proto.c ../src/proto/hook.c
 pkt_wait_list_check_LDADD = ../src/tools/libjunkietools.la -lm
-ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h
+ip_reassembly_check_SOURCES = ip_reassembly_check.c lib_test_junkie.c lib_test_junkie.h
 ip_reassembly_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h
+tcp_reorder_check_SOURCES = tcp_reorder_check.c lib_test_junkie.c lib_test_junkie.h
 tcp_reorder_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-streambuf_check_SOURCES = streambuf_check.c lib.c lib.h
+streambuf_check_SOURCES = streambuf_check.c lib_test_junkie.c lib_test_junkie.h
 streambuf_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-postgres_check_SOURCES = postgres_check.c lib.c lib.h sql_test.c sql_test.h
+postgres_check_SOURCES = postgres_check.c lib_test_junkie.c lib_test_junkie.h sql_test.c sql_test.h
 postgres_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 endianness_check_SOURCES = endianness_check.c
 endianness_check_LDADD = ../src/tools/libjunkietools.la -lm
@@ -115,15 +115,15 @@ string_buffer_check_SOURCES = string_buffer_check.c
 string_buffer_check_LDADD = ../src/tools/libjunkietools.la -lm
 cursor_check_SOURCES = cursor_check.c
 cursor_check_LDADD = ../src/tools/libjunkietools.la -lm
-tls_check_SOURCES = tls_check.c lib.c lib.h
+tls_check_SOURCES = tls_check.c lib_test_junkie.c lib_test_junkie.h
 tls_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-mysql_check_SOURCES = mysql_check.c lib.c lib.h sql_test.c sql_test.h
+mysql_check_SOURCES = mysql_check.c lib_test_junkie.c lib_test_junkie.h sql_test.c sql_test.h
 mysql_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-cifs_check_SOURCES = cifs_check.c lib.c lib.h
+cifs_check_SOURCES = cifs_check.c lib_test_junkie.c lib_test_junkie.h
 cifs_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-tds_check_SOURCES = tds_check.c lib.c lib.h sql_test.c sql_test.h
+tds_check_SOURCES = tds_check.c lib_test_junkie.c lib_test_junkie.h sql_test.c sql_test.h
 tds_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
-tns_check_SOURCES = tns_check.c lib.c lib.h sql_test.c sql_test.h
+tns_check_SOURCES = tns_check.c lib_test_junkie.c lib_test_junkie.h sql_test.c sql_test.h
 tns_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 
 clean-local:
