--- a/src/proto/Makefile.am
+++ b/src/proto/Makefile.am
@@ -33,6 +33,7 @@ libproto_la_SOURCES = \
 	dhcp.c \
 	fcoe.c \
 	rpc.c \
+	der.c \
 	tds.c tds_msg.c
 
 libproto_la_LIBADD = ../tools/libjunkietools.la
