chg: added simple rpc parser

--- a/src/proto/Makefile.am
+++ b/src/proto/Makefile.am
@@ -32,6 +32,7 @@ libproto_la_SOURCES = \
 	skinny.c \
 	dhcp.c \
 	fcoe.c \
+	rpc.c \
 	tds.c tds_msg.c
 
 libproto_la_LIBADD = ../tools/libjunkietools.la
