update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,18 @@ autom4te.cache
 config.h.in
 Makefile
 Makefile.in
+*.dirstamp
 *.lo
 *.la
 *.go
+*.out2
 .deps
 .libs
 config.guess
 config.sub
 compile
 test-driver
+ar-lib
 depcomp
 install-sh
 ltmain.sh
@@ -77,6 +80,12 @@ tests/objalloc_check
 tests/serialize_check.*ser
 tests/sock-check/
 tests/tds_check
+tests/cifs_check
+tests/der_check
+tests/mysql_check
+tests/string_buffer_check
+tests/tls_check
+tests/tns_check
 doxydoc
 config/instvars.scm
 config/.index
